deleteByComplaintId
